--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
