--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "symfony/event-dispatcher": "^2.7",
         "monolog/monolog": "^1.16",
-        "doctrine/collections": "^1.3"
+        "doctrine/collections": "^1.3",
+        "symfony/console": "^2.7"
     },
     "autoload": {
       "psr-4": {
