--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
     - wget http://alpha.neotechnology.com.s3-website-eu-west-1.amazonaws.com/neo4j-enterprise-3.0.0-alpha.LATEST-unix.tar.gz > null
     - mkdir neo
     - tar xzf neo4j-enterprise-3.0.0-alpha.LATEST-unix.tar.gz -C neo --strip-components=1 > null
+    - sed -i.bak 's/^\(dbms\.security\.auth_enabled=\).*/\1false/' ./neo/conf/neo4j-server.properties
     - neo/bin/neo4j start > null
     - composer install --prefer-source --no-interaction
     - composer self-update
