--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4.8",
+        "neoxygen/neoclient": "^3.3"
     },
     "extra": {
         "branch-alias": {
