--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "neoxygen/neoclient": "^3.3"
+        "neoxygen/neoclient": "^3.3",
+        "symfony/stopwatch": "^2.7"
     },
     "extra": {
         "branch-alias": {
