travis should download 3.0.0-M01-NIGHTLY now

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ php:
 
 
 before_install:
-    - wget http://alpha.neotechnology.com.s3-website-eu-west-1.amazonaws.com/neo4j-enterprise-3.0.0-alpha.LATEST-unix.tar.gz > null
+    - wget http://alpha.neohq.net/dist/neo4j-enterprise-3.0.0-M01.NIGHTLY-unix.tar.gz > null
     - mkdir neo
-    - tar xzf neo4j-enterprise-3.0.0-alpha.LATEST-unix.tar.gz -C neo --strip-components=1 > null
+    - tar xzf neo4j-enterprise-3.0.0-M01.NIGHTLY-unix.tar.gz -C neo --strip-components=1 > null
     - sed -i.bak 's/^\(dbms\.security\.auth_enabled=\).*/\1false/' ./neo/conf/neo4j-server.properties
     - neo/bin/neo4j start > null
     - composer install --prefer-source --no-interaction
