--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
     - mkdir neo
     - tar xzf neo4j-enterprise-3.0.0-M01-NIGHTLY-unix.tar.gz -C neo --strip-components=1 > null
     - sed -i.bak 's/^\(dbms\.security\.auth_enabled=\).*/\1false/' ./neo/conf/neo4j-server.properties
-    - neo/bin/neo4j start > null
+    - neo/bin/neo4j start
     - composer install --prefer-source --no-interaction
     - composer self-update
 
