--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,14 @@ sudo: false
 php:
     - 5.6
     - 7.0
-jdk:
-  - oraclejdk8
-
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
 
 before_install:
+    - rm -rf ~/.linuxbrew
+    - yes | ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/linuxbrew/go/install)"
+    - export PATH="$HOME/.linuxbrew/bin:$PATH"
+    - export MANPATH="$HOME/.linuxbrew/share/man:$MANPATH"
+    - export INFOPATH="$HOME/.linuxbrew/share/info:$INFOPATH"
+    - brew install jdk
     - wget http://alpha.neohq.net/dist/neo4j-enterprise-3.0.0-M01-NIGHTLY-unix.tar.gz > null
     - mkdir neo
     - tar xzf neo4j-enterprise-3.0.0-M01-NIGHTLY-unix.tar.gz -C neo --strip-components=1 > null
