--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,8 @@ before_install:
     - sudo apt-get update > /dev/null
     # install Oracle JDK8
     - sh -c ./build/install-jdk8.sh
-    - wget http://alpha.neohq.net/dist/neo4j-enterprise-3.0.0-M01-NIGHTLY-unix.tar.gz > null
-    - mkdir neo
-    - tar xzf neo4j-enterprise-3.0.0-M01-NIGHTLY-unix.tar.gz -C neo --strip-components=1 > null
-    - sed -i.bak 's/^\(dbms\.security\.auth_enabled=\).*/\1false/' ./neo/conf/neo4j-server.properties
-    - neo/bin/neo4j start
+    # install and launch neo4j
+    - sh -c ./build/install-neo.sh
     - composer install --prefer-source --no-interaction
     - composer self-update
 
