--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/event-dispatcher": "^2.7",
         "monolog/monolog": "^1.16",
         "doctrine/collections": "^1.3",
-        "symfony/console": "^2.7"
+        "symfony/console": "^2.7",
+        "graphaware/neo4j-common": "^1.7"
     },
     "autoload": {
       "psr-4": {
@@ -28,7 +29,8 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "neoxygen/neoclient": "^3.3",
-        "symfony/stopwatch": "^2.7"
+        "symfony/stopwatch": "^2.7",
+        "behat/behat": "~3.0.4"
     },
     "extra": {
         "branch-alias": {
