--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 
 script:
     - vendor/bin/phpunit --exclude-group fail
+    - vendor/bin/behat
 
 notifications:
     email: "christophe@graphaware.com"
