--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,9 @@
     ],
     "require": {
         "symfony/event-dispatcher": "^2.7",
-        "monolog/monolog": "^1.16",
-        "doctrine/collections": "^1.3",
         "symfony/console": "^2.7",
-        "graphaware/neo4j-common": "^1.7"
+        "graphaware/neo4j-common": "^1.7",
+        "myclabs/php-enum": "^1.4"
     },
     "autoload": {
       "psr-4": {
