--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         }
     ],
     "require": {
+        "php": ">= 5.6",
+        "ext-bcmath": "*",
         "symfony/event-dispatcher": "^2.7|^3.0",
         "graphaware/neo4j-common": "^2.0",
         "myclabs/php-enum": "^1.4"
