--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "graphaware/neo4j-bolt",
+    "name": "plumtreesystems/neo4j-bolt",
     "description": "Neo4j Bolt Binary Protocol PHP Driver",
     "type": "library",
     "license": "MIT",
@@ -7,6 +7,11 @@
         {
             "name": "Christophe Willemsen",
             "email": "christophe@graphaware.com"
+        },
+        {
+            "name": "Matas Valužis",
+            "email": "matt@plumtreesystems.com",
+            "role": "Maintainer"
         }
     ],
     "require": {
@@ -30,8 +35,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "symfony/stopwatch": "^2.7",
-        "behat/behat": "~3.0.4"
+        "symfony/stopwatch": "^2.7"
     },
     "minimum-stability": "dev"
 }
