--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,11 @@
         "myclabs/php-enum": "^1.4",
       "ext-json": "*"
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit --exclude-group long",
+        "lint": "vendor/bin/phpcs",
+        "fix-lint": "vendor/bin/phpcbf"
+    },
     "autoload": {
       "psr-4": {
           "PTS\\Bolt\\": "src/"
@@ -35,7 +40,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "symfony/stopwatch": "^2.7"
+        "symfony/stopwatch": "^2.7",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "minimum-stability": "dev"
 }
