--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,35 @@
 language: php
 php:
-    - 7.2
-    - 7.4
+  - 7.2
+  - 7.4
 
 script:
-    - vendor/bin/phpunit --exclude-group long
+  - composer lint
+  - composer test
 
 env:
-    global:
-        - NEO4J_HOST=127.0.0.1:7687
-        - NEO4J_USER=neo4j
-        - NEO4J_PASSWORD=neo4j
-    jobs:
-        - NEO4J_VERSION=3.3 BOLT_VERSION=1
-        - NEO4J_VERSION=3.4 BOLT_VERSION=2
-        - NEO4J_VERSION=3.5 BOLT_VERSION=3
-        - NEO4J_VERSION=4.0 BOLT_VERSION=4
+  global:
+    - NEO4J_HOST=127.0.0.1:7687
+    - NEO4J_USER=neo4j
+    - NEO4J_PASSWORD=neo4j
+  jobs:
+    - NEO4J_VERSION=3.3 BOLT_VERSION=1
+    - NEO4J_VERSION=3.4 BOLT_VERSION=2
+    - NEO4J_VERSION=3.5 BOLT_VERSION=3
+    - NEO4J_VERSION=4.0 BOLT_VERSION=4
 
 
 before_install:
-    - composer install --prefer-source --no-interaction
-    - |
-        if [[ $NEO4J_VERSION ]]; then
-          docker pull neo4j:$NEO4J_VERSION
-          docker run -d -p 7474:7474 -p 7687:7687 neo4j:$NEO4J_VERSION bash -c "neo4j-admin set-initial-password neo4j; neo4j console"
-          docker ps -a
-        fi
+  - composer install --prefer-source --no-interaction
+  - |
+    if [[ $NEO4J_VERSION ]]; then
+      docker pull neo4j:$NEO4J_VERSION
+      docker run -d -p 7474:7474 -p 7687:7687 neo4j:$NEO4J_VERSION bash -c "neo4j-admin set-initial-password neo4j; neo4j console"
+      docker ps -a
+    fi
 
 services:
-    - docker
+  - docker
 
 notifications:
-    email: "matt@plumtreesystems.com"
+  email: "matt@plumtreesystems.com"
