--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -51,7 +51,7 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
     
     - name: Lint
-      run: composer test
+      run: composer lint
     
     - name: Test
       env:
