--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,4 +16,7 @@
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
+    <logging>
+        <log type="coverage-clover" target="clover.xml"/>
+    </logging>
 </phpunit>
